# -mail-organizer

./: .env.production.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  PLAN.md  PLAN_V1.md  PROGRESS.md  README.md  docker-compose.yml
.claude/agents/: backend-dev.md  frontend-dev.md  planner.md  researcher.md  reviewer.md
.github/workflows/: ci-doctor.lock.yml  (+5 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/core/: dependencies.py  error_reporter.py  exceptions.py
backend/app/mail/routers/: classify.py  inbox.py  naver.py
backend/app/mail/services/: classifier.py  gmail.py  naver.py
backend/app/models/: __init__.py  label.py  mail.py  sync_state.py  user.py
backend/app/routers/: auth.py  calendar.py  classify.py  gmail.py  inbox.py  naver.py
backend/app/services/: background_sync.py  calendar_service.py  classifier.py  feedback.py  gmail_service.py  google_auth.py  helpers.py  naver_service.py
backend/app/todo/: models.py
backend/tests/: conftest.py
backend/tests/routers/: test_auth.py  test_classify.py  test_gmail.py  test_inbox.py  test_naver.py
bot/: .env.example  requirements.txt
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
references/: README.md  api-gmail.md  decision-mcp-vs-api.md  guide-claude-code-skills.md  guide-google-oauth-setup.md  guide-oracle-cloud-free-deploy.md  guide-subagent-architecture.md  research-mail-classification.md  research-naver-imap.md  research-openai-optimization-email-classification.md
(+80 files in other folders)
